# staccato

./: CMakeLists.txt  INSTALL  Makefile  README
src/: DSD.h  DSDDecompose.c  DSDDecompose.h  DSDInterface.c  DSDInterface.h  DSDManager.c  DSDManager.h  DSDManipulations.c  DSDManipulations.h  DSDNewDecompose.c  DSDNewDecompose.h  DSDOrDecompose.c  DSDOrDecompose.h  DSDPrimeDecompose.c  DSDPrimeDecompose.h  DSDUtilities.c  DSDUtilities.h  DSDXorDecompose.c  DSDXorDecompose.h  fixheap.c  fixheap.h  sample.c
